src/test/resources/purescript_examples/passing/TypeSynonymInData.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSTypeSynonymDeclarationImpl(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PsiElement(proper name)('A')
          PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Array')
                  PsiElement(whitespace)(' ')
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(GenericIdentifier)
              PsiElement(identifier)('a')
              PsiElement(whitespace)('\n\n')
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Foo')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Foo')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PsiElement(()('(')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSIdentifierImpl(TypeConstructor)
                PSProperNameImpl(Qualified)
                  PSProperNameImpl(ProperName)
                    PsiElement(proper name)('A')
                    PsiElement(whitespace)(' ')
            PSTypeAtomImpl(TypeAtom)
              PSIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('a')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PsiElement(|)('|')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Bar')
            PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PSBinderImpl(Binder)
          PsiElement(()('(')
          PSBinderImpl(Binder)
            PSBinderAtomImpl(BinderAtom)
              PSConstructorBinderImpl(ConstructorBinder)
                PSIdentifierImpl(GenericIdentifier)
                  PSProperNameImpl(Qualified)
                    PSProperNameImpl(ProperName)
                      PsiElement(proper name)('Foo')
                      PsiElement(whitespace)(' ')
                PSBinderImpl(Binder)
                  PSObjectBinderImpl(ObjectBinder)
                    PsiElement([)('[')
                    PsiElement(])(']')
          PsiElement())(')')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSIdentifierImpl(Constructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Bar')
                  PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('log')
                  PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
